add get route for albums
