# src/swagger/swagger.json
@@ -245,6 +245,107 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": ["Album"],
+        "summary": "Retrieve a list of albums",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "maxPage": {
+                      "type": "integer",
+                      "description": "Maximum page number"
+                    },
+                    "albums": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer",
+                            "description": "Album ID"
+                          },
+                          "owner": {
+                            "type": "integer",
+                            "description": "Owner's user ID"
+                          },
+                          "name": {
+                            "type": "string",
+                            "description": "Album name"
+                          },
+                          "counterPhoto": {
+                            "type": "integer",
+                            "description": "Number of photos in the album"
+                          },
+                          "location": {
+                            "type": "string",
+                            "description": "Location of the album"
+                          },
+                          "createdAt": {
+                            "type": "string",
+                            "description": "Date of album creation"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "example": {
+                  "maxPage": 1,
+                  "albums": [
+                    {
+                      "id": 7,
+                      "owner": 1,
+                      "name": "Test",
+                      "counterPhoto": 0,
+                      "location": "Paris",
+                      "createdAt": "03/04/2001"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized: Token is missing or invalid"
+          },
+          "403": {
+            "description": "Forbidden: Not authorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "description": "Bearer Authorization Token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number for pagination (default is 1, Maximum is 20)",
+            "required": false,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ]
       }
     }
   }
